# Vocal-Scriber

./: .env.example  .gitignore  LICENSE  MENUBAR_IMPLEMENTATION.md  README.md  Sunday_Session_Prompt.md  diarize.py  pyproject.toml  requirements-diarization.txt  requirements.txt  vocal-scriber.py
docs/internal/: macos-menubar.md  pyproject.md
docs/windows/: app-packaging.md  cuda.md
gui/: __init__.py  gui_controller.py  menubar_waveform.py  monitor_utils.py  waveform_window.py
packaging/windows/: VocalScriber.iss  app_launcher.py  generate_assets.py  vocal_scriber_app.spec
scripts/: build-windows-app.ps1  create_distribution.sh  setup-macos.sh  setup-windows.ps1  setup.sh  start_local.sh
src/vocal_scriber/: __init__.py  __main__.py  common.py  windows_app.py  windows_support.py
src/vocal_scriber/ui/: controller.py  menubar_waveform.py  waveform_window.py
tools/diarization/: README.md  diarize.py  requirements.txt
